--- a/Pathology/templates/report.html
+++ b/Pathology/templates/report.html
@@ -148,7 +148,7 @@
                             <th>Results</th>
                             <th>Confidence</th>
                             <th>Heat Map</th>
-                            <th>Upload Image</th>
+                            <th>Image</th>
                         </tr>
                         <tr>
                             <td>
