--- a/Pathology/templates/About_Us.html
+++ b/Pathology/templates/About_Us.html
@@ -70,6 +70,13 @@
         <li>Patient Care and Ambulance Services</li>
         <li>Operating theaters of World Class Standard</li>
         <li>Team of Pathology Specialists</li>
+        <br>
+        <br>
+        <br>
+        <h4>About this version</h4>
+        <li>Added Navigation bar in all Pages so that you can Navigate through all the pages.</li>
+        <li>You can see uploaded image on the Report Page.</li>
+        <li>You can download the whole report in PDF format.</li>
     </ul>
 </div>
 </body>
