--- a/Pathology/templates/Home.html
+++ b/Pathology/templates/Home.html
@@ -16,6 +16,8 @@
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
+    
+    <img src="{% static 'Images/gbm.png' %}" alt="no image" height="75" width="200">
 
     <div class="collapse navbar-collapse justify-content-around" id="navbarSupportedContent">
         <ul class="navbar-nav mc-auto">
