--- a/Pathology/templates/Home.html
+++ b/Pathology/templates/Home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
-    <a class="navbar-brand" href=#><i class='fa fa-clinic-medical'></i>Doctor App</a>
+    <a class="navbar-brand" href=#><i class='fa fa-clinic-medical'></i>Doctor App By</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
